# pygame-2player

./: pyproject.toml
src/: main.py
